--- a/constrained_ik/package.xml
+++ b/constrained_ik/package.xml
@@ -25,6 +25,7 @@
   <build_depend>tf_conversion</build_depend>
   <build_depend>pluginlib</build_depend>
   <build_depend>eigen_conversions</build_depend>
+  <build_depend>fcl</build_depend>
   
   <run_depend>boost</run_depend>
   <run_depend>eigen</run_depend>
@@ -36,6 +37,7 @@
   <run_depend>tf_conversion</run_depend>
   <run_depend>pluginlib</run_depend>
   <run_depend>eigen_conversions</run_depend>
+  <run_depend>fcl</run_depend>
 
   <!-- The export tag contains other, unspecified, tags -->
   <export>
